[tool.poetry]
name = "ods-lb2"
version = "0.1.0"
description = ""
authors = ["RuslanUC <dev_ruslan_uc@protonmail.com>"]
readme = "README.md"
packages = [{include = "ods_lb2"}]

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
